# Trackastra-et-Ultra

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
example/: basic_use.ipynb  model_comparison_results.csv  model_diff.ipynb
trackastra_pretrained_feats/: __init__.py  pretrained_augmentations.py  pretrained_features.py  utils  utils.py
trackastra_pretrained_feats/data/: wrfeat.py
trackastra_pretrained_feats/model/: model.py
