[tool.poetry]
name = "trackastra_pretrained_feats"
version = "0.0.1"
description = "Pretrained feature extraction API for Trackastra"
authors = ["Cyril Achard, Martin Weigert"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
transformers = "*"
sam-2 = {git = "https://github.com/facebookresearch/sam2.git"}
zarr = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"